# hackaton-skfo-hub

./: Makefile  README.md  docker-compose.yaml
docker/clickhouse/: .gitignore
docker/clickhouse/etc/clickhouse-server/users.d/: local.xml
docker/grafana/: .gitignore
docker/metabase/: .gitignore
docker/minio/: .gitignore
docker/python-consumer/: .env.template  .gitignore  Dockerfile  healthcheck.py  pyproject.toml
docker/python-consumer/consumer/: app.py  config.py  di.py
docker/python-oscillogram-analyzer/: .env.template  .gitignore  Dockerfile  pyproject.toml
docker/python-oscillogram-analyzer/oscillogram_analyzer/: app.py  di.py
docker/python-oscillogram-analyzer/oscillograms/: 04JUL205.cff
docker/python-producer/: Dockerfile  pyproject.toml
docker/python-producer/oscillograms/: 02JUL235.214  04APR163.459  04JUL205.552
docker/python-producer/producer/: app.py  config.py  di.py
